--- a/Project_Calculator.ipynb
+++ b/Project_Calculator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMh/SfL280MG5DYI95yBXbQ",
+      "authorship_tag": "ABX9TyPVNWAbcQ75Ietpt6U4hPZj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,75 +29,53 @@
     {
       "cell_type": "code",
       "source": [
-        "def calculator():\n",
-        "    x = eval(input('Please enter X: '))\n",
-        "    y = eval(input('Please enter Y: '))\n",
+        "def get_numbers():\n",
+        "    x = float(input('Please enter X: '))\n",
+        "    y = float(input('Please enter Y: '))\n",
         "    return x, y\n",
         "\n",
-        "    ops = int(input(\"1. Add | 2. Sub | 3. Mul | 4. Div | 5. Pow\"))\n",
+        "def calculator():\n",
+        "    x, y = get_numbers()\n",
         "\n",
-        "    if ops == 1 :\n",
-        "        return f'Addition of {x} and {y} is {x+y}'\n",
-        "    elif ops == 2 :\n",
-        "        return f'Subtraction of {x} and {y} is {x-y}'\n",
-        "    elif ops == 3 :\n",
-        "        return f'Multiplication of {x} and {y} is {x*y}'\n",
-        "    elif ops == 4 :\n",
-        "        return f'Division of {x} and {y} is {x-y}'\n",
+        "    ops = int(input(\"1. Add | 2. Sub | 3. Mul | 4. Div | 5. Pow: \"))\n",
+        "\n",
+        "    if ops == 1:\n",
+        "        print(f'Addition of {x} and {y} is {x + y}')\n",
+        "    elif ops == 2:\n",
+        "        print(f'Subtraction of {x} and {y} is {x - y}')\n",
+        "    elif ops == 3:\n",
+        "        print(f'Multiplication of {x} and {y} is {x * y}')\n",
+        "    elif ops == 4:\n",
+        "        if y == 0:\n",
+        "            print(\"Cannot divide by zero.\")\n",
+        "        else:\n",
+        "            print(f'Division of {x} and {y} is {x / y}')\n",
+        "    elif ops == 5:\n",
+        "        print(f'Power of {x} to the {y} is {x ** y}')\n",
         "    else:\n",
-        "        return f'Power of {x} and {y} is {x**y}'"
+        "        print(\"Invalid operation.\")\n",
+        "\n",
+        "calculator()\n"
       ],
       "metadata": {
-        "id": "BM2QQzgn-4V2"
-      },
-      "execution_count": 25,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
+        "id": "BM2QQzgn-4V2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 104
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "yrB8iTuk-UMc",
-        "outputId": "6a3e6505-8e8b-48f6-ccfd-03fbd31b527d"
+        "outputId": "13070be6-83cd-44e7-c22e-449612fa547d"
       },
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<function __main__.calculator(self)>"
-            ],
-            "text/html": [
-              "<div style=\"max-width:800px; border: 1px solid var(--colab-border-color);\"><style>\n",
-              "      pre.function-repr-contents {\n",
-              "        overflow-x: auto;\n",
-              "        padding: 8px 12px;\n",
-              "        max-height: 500px;\n",
-              "      }\n",
-              "\n",
-              "      pre.function-repr-contents.function-repr-contents-collapsed {\n",
-              "        cursor: pointer;\n",
-              "        max-height: 100px;\n",
-              "      }\n",
-              "    </style>\n",
-              "    <pre style=\"white-space: initial; background:\n",
-              "         var(--colab-secondary-surface-color); padding: 8px 12px;\n",
-              "         border-bottom: 1px solid var(--colab-border-color);\"><b>calculator</b><br/>def calculator()</pre><pre class=\"function-repr-contents function-repr-contents-collapsed\" style=\"\"><a class=\"filepath\" style=\"display:none\" href=\"#\">/content/&lt;ipython-input-23-11ccc39a717f&gt;</a>&lt;no docstring&gt;</pre></div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter X: 2\n",
+            "Please enter Y: 5\n",
+            "1. Add | 2. Sub | 3. Mul | 4. Div | 5. Pow: 1\n",
+            "Addition of 2.0 and 5.0 is 7.0\n"
+          ]
         }
-      ],
-      "source": [
-        "cal=calculator\n",
-        "cal\n",
-        "\n",
-        ""
       ]
     }
   ]
