--- a/Real_Estate_PricePrediction_Project_UsingPython&ML.ipynb
+++ b/Real_Estate_PricePrediction_Project_UsingPython&ML.ipynb
@@ -17,7 +17,7 @@
         "id": "35a146db"
       },
       "source": [
-        "# Model solution file for week 2 assignment ML"
+        "# Real_Estate_PricePrediction_Project_UsingPython&ML"
       ]
     },
     {
